Ensure nav2 is always visible

--- a/docs/_sass/jekyll-theme-leap-day.scss
+++ b/docs/_sass/jekyll-theme-leap-day.scss
@@ -341,41 +341,53 @@ nav, nav2 {
   li .current {
     background: #eee;
   }
-  .normal {
-    font-weight: normal;
-  }
   li .current > ul {
     background: #fbfbfb;
   }
-  li .collapse {
+  .normal {
+    font-weight: normal;
+  }
+  li.normal.tag-h1 {
+    padding-bottom: 15px;
+    margin-bottom: 5px;
+  }
+  ul.collapse {
     display:none;
+    float:right;
+    background-color: #fbfbfb;
+    border-left: 1px solid #e5e5e5;
   }
   li:hover .collapse {
     display:block;
+    position: absolute;
   }
 
   ul {
     list-style: none;
     font-size: 14px;
     line-height:24px;
-    padding: 0 0 0 20px;
+    padding: 0;
+    max-width: 210px;
 
     li {
       padding: 0px 0px;
       margin:  5px 0px 15px 0px;
       line-height: 16px;
       color:#3399cc;
-      // padding-right:17px;
-      // position:relative;
-      // right:-12px;
 
       &.tag-h1 {
         font-size: 1.2em;
+        padding-left: 20px;
+
+        ul.collapse {
+          margin: 5px 0px 5px 10px;
+        }
 
         ul {
+          padding-left: 20px;
           list-style-image:url('../images/bullet.png');
-          margin:  5px 0px;
-          li {margin:  5px 0px;}
+          margin: 5px 0px;
+          li {margin: 5px 0px;}
         }
         a {
           color: #333;
@@ -419,8 +431,21 @@ footer {
     margin:0;
   }
 
-  nav, nav2 {
+  nav {
     display: none;
+  }
+  nav2 {
+    display: block;
+    width: auto;
+    height: auto;
+    position: relative;
+    margin: 10px;
+    padding: 10px;
+    top:auto;
+    bottom:auto;
+    left:auto;
+    right:auto;
+    max-width: 600px;
   }
 
   header, section, footer {
